Adding missing closing html tags

--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -105,7 +105,7 @@
                       ng-model="model.viewModel.record.january"
                       ng-change="patch( 'january' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> January
+                      type="checkbox"></input> January
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -114,7 +114,7 @@
                       ng-model="model.viewModel.record.february"
                       ng-change="patch( 'february' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> February
+                      type="checkbox"></input> February
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -123,7 +123,7 @@
                       ng-model="model.viewModel.record.march"
                       ng-change="patch( 'march' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> March
+                      type="checkbox"></input> March
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -132,7 +132,7 @@
                       ng-model="model.viewModel.record.april"
                       ng-change="patch( 'april' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> April
+                      type="checkbox"></input> April
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -141,7 +141,7 @@
                       ng-model="model.viewModel.record.may"
                       ng-change="patch( 'may' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> May
+                      type="checkbox"></input> May
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -150,7 +150,7 @@
                       ng-model="model.viewModel.record.june"
                       ng-change="patch( 'june' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> June
+                      type="checkbox"></input> June
                   </label>
                 </div>
               </div>
@@ -161,7 +161,7 @@
                       ng-model="model.viewModel.record.july"
                       ng-change="patch( 'july' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> July
+                      type="checkbox"></input> July
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -170,7 +170,7 @@
                       ng-model="model.viewModel.record.august"
                       ng-change="patch( 'august' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> August
+                      type="checkbox"></input> August
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -178,7 +178,7 @@
                     <input id="september" name="name"
                       ng-model="model.viewModel.record.september"
                       ng-change="patch( 'september' )"
-                      type="checkbox"> September
+                      type="checkbox"></input> September
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -187,7 +187,7 @@
                       ng-model="model.viewModel.record.october"
                       ng-change="patch( 'october' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> October
+                      type="checkbox"></input> October
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -196,7 +196,7 @@
                       ng-model="model.viewModel.record.november"
                       ng-change="patch( 'november' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> November
+                      type="checkbox"></input> November
                   </label>
                 </div>
                 <div class="col-sm-2">
@@ -205,7 +205,7 @@
                       ng-model="model.viewModel.record.december"
                       ng-change="patch( 'december' )"
                       ng-disabled="!model.editEnabled"
-                      type="checkbox"> December
+                      type="checkbox"></input> December
                   </label>
                 </div>
               </div>
