--- a/web/app/root/wait.tpl.html
+++ b/web/app/root/wait.tpl.html
@@ -1,7 +1,2 @@
-<div class="inner-view-frame">
-  <div class="container-fluid bg-white">
-    <h3 class="text-primary text-center">Waiting for a response from the server</h3>
-    <div class="loader"></div>
-  </div>
-</div>
+<div class="inner-view-frame"><cn-loading></cn-loading></div>
 <div class="gradient-footer"></div>
