--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -76,7 +76,8 @@
                        | limitTo: model.listModel.paginationFactory.itemsPerPage"
             ng-click="model.listModel.chooseMode ? chooseRecord( record ) : selectRecord( record )"
             ng-class="{ success:model.listModel.chooseMode && record.chosen }">
-            <td ng-repeat="column in dataArray">
+            <td ng-repeat="column in dataArray"
+                ng-class="{'text-left':'left'==column.align,'text-right':'right'==column.align}">
               <div>{{ record[column.key] | cnMetaFilter:column.filter }}</div>
             </td>
             <td class="tiny" ng-if="model.deleteEnabled">
