Refining code and fixing bugs

--- a/web/app/application/view.tpl.html
+++ b/web/app/application/view.tpl.html
@@ -6,5 +6,5 @@
   <cn-record-list model="model.viewModel[child.camel+'Model']"></cn-record-list>
 </div>
 <div class="well vertical-spacer text-info" ng-if="!showChildren">
-  Note: cohort, role and site lists can only be viewed for the application you are currently using.
+  Note: cohort, role, site and script lists can only be viewed for the application you are currently using.
 </div>
