--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -165,7 +165,7 @@
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
     <button type="button" class="btn btn-default" ng-click="back()">Cancel</button>
-    <button type="button" class="btn btn-primary" ng-click="submit()">
+    <button type="button" class="btn btn-primary" ng-click="submit()" ng-disabled="isAdding">
       <i class="glyphicon glyphicon-cloud-upload"></i> Save
     </button>
   </div>
