--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -3,7 +3,8 @@
     <h4 class="modal-title">{{ title }}</h4>
   </div>
   <div class="modal-body" ng-class="{ 'text-danger': error }">{{ message }}</div>
-  <div class="modal-footer bg-info">
+  <div class="modal-footer bg-info" ng-if="!block">
     <button type="submit" class="btn btn-primary">Close</button>
   </div>
+  <progressbar ng-if="block" class="progress-striped active rounded-bottom" value="1" max="1"></progressbar>
 </form>
