--- a/web/app/cenozo/modal-value.tpl.html
+++ b/web/app/cenozo/modal-value.tpl.html
@@ -3,7 +3,7 @@
     <h4 class="modal-title">{{ title }}</h4>
   </div>
   <div class="modal-body">
-    <label for="value" class="control-label">{{ message }}</label>
+    <label for="value" class="control-label allow-select">{{ message }}</label>
     <input ng-if="!enumList"
            id="value"
            name="value"
