--- a/web/app/root/home.tpl.html
+++ b/web/app/root/home.tpl.html
@@ -1,6 +1,6 @@
 <div class="inner-view-frame">
   <cn-loading ng-if="model.isLoading"></cn-loading>
-  <div class="container-fluid bg-white" ng-if="!model.isLoading">
+  <div class="container-fluid bg-white allow-select" ng-if="!model.isLoading">
     <h3 class="text-primary">Welcome to {{ model.application.title }} version {{ model.application.version }}</h3>
     <div class="container-fluid">
       You are currently logged on as
