--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -6,5 +6,9 @@
   <div class="modal-footer bg-info" ng-if="!block">
     <button type="submit" class="btn btn-primary">Close</button>
   </div>
-  <progressbar ng-if="block" class="progress-striped active rounded-bottom" value="1" max="1"></progressbar>
+  <progressbar ng-if="block"
+               class="progress-striped active rounded-bottom"
+               animate="false"
+               value="1"
+               max="1"></progressbar>
 </form>
