--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -269,8 +269,8 @@
       <div class="btn-group pull-left">
         <button class="btn btn-default"
                 type="button"
-                ng-repeat="operation in model.viewModel.operationList"
-                ng-click="operation.execute()">{{ operation.name }}</button>
+                ng-repeat="(name, execute) in model.module.viewOperationList"
+                ng-click="execute( model.viewModel )">{{ name }}</button>
       </div>
       <div class="btn-group">
         <button ng-if="model.deleteEnabled"
