--- a/web/app/cenozo/modal-timezone.tpl.html
+++ b/web/app/cenozo/modal-timezone.tpl.html
@@ -3,7 +3,7 @@
     <h4 class="modal-title">Select a Timezone</h4>
   </div>
   <!-- this model-body requires a specialized style so that the typeahead displays correctly -->
-  <div class="modal-body" style="overflow: visible; margin-bottom: 4em;">
+  <div class="modal-body" style="overflow: visible; margin-bottom: 5em;">
     <p class="text-info">
       Select which timezone you would like all times to be displayed in.<br/>
       Note that most timezones have multiple names, you may choose any.
@@ -11,8 +11,8 @@
     <hr/>
     <div class="form-group"
          ng-class="{ 'has-feedback has-error': form.timezone.$dirty && form.timezone.$invalid }">
-      <label for="timezone" class="col-sm-3 control-label">Timezone</label>
-      <div class="col-sm-9">
+      <label for="timezone" class="col-sm-4 control-label">Timezone</label>
+      <div class="col-sm-8">
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.timezone.$dirty && form.timezone.$invalid }">
           <input id="timezone"
@@ -32,6 +32,22 @@
           <span class="help-block" ng-if="form.timezone.$error.required">Cannot be blank</span>
           <span class="help-block" ng-if="form.timezone.$error.editable">Must be chosen from list</span>
         </span>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="use12hourClock" class="col-sm-4 control-label"
+             tooltip="Whether to display times using the 12-hour clock (am/pm)">Use 12-Hour Clock</label>
+      <div class="col-sm-8">
+        <div class="input-group">
+          <select id="use12hourClock"
+                  name="use12hourClock"
+                  ng-model="use12hourClock"
+                  class="form-control"
+                  required>
+            <option value="1">Yes</option>
+            <option value="0">No</option>
+          </select>
+        </div>
       </div>
     </div>
   </div>
