Passing $state and CnHttpFactory to the view model's operation list execute functions
This is done so that the operation list functions do not have to get these
dependencies by using the injector() function.

--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -270,7 +270,7 @@
         <button class="btn btn-default"
                 type="button"
                 ng-repeat="(name, execute) in model.module.viewOperationList"
-                ng-click="execute( model.viewModel )">{{ name }}</button>
+                ng-click="execute( model.viewModel, $state, CnHttpFactory )">{{ name }}</button>
       </div>
       <div class="btn-group">
         <button ng-if="model.deleteEnabled"
