Adjusting size of loading animation in typeaheads

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -30,7 +30,7 @@
               typeahead-min-length="2"
               cn-change="check( input.key )"
               class="form-control"
-              ng-class="{ 'loading': input.typeahead.isLoading }"
+              ng-class="{ 'loading-small': input.typeahead.isLoading }"
               type="text"
               placeholder="(Type the first few letters to search possible values)"
               autocomplete="off"
@@ -45,7 +45,7 @@
               typeahead-min-length="2"
               cn-change="check( input.key )"
               class="form-control"
-              ng-class="{ 'loading': input.typeahead.isLoading }"
+              ng-class="{ 'loading-small': input.typeahead.isLoading }"
               type="text"
               placeholder="(Type the first few letters to search possible values)"
               autocomplete="off"
