Moving participant notes to it's own state

--- a/web/app/participant/history.tpl.html
+++ b/web/app/participant/history.tpl.html
@@ -6,7 +6,7 @@
          ng-click="refresh( true )"
          tooltip="Click to refresh data"
          tooltip-placement="left"></i>
-      Participant History
+      Participant History for {{ uid }}
       <span ng-if="isLoading">(Loading&hellip;)</span>
     </h4>
   </div>
