Adding notes/history buttons in each other's views

--- a/web/app/participant/history.tpl.html
+++ b/web/app/participant/history.tpl.html
@@ -50,6 +50,7 @@
     </div>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
+    <button type="button" class="btn btn-default pull-left" ng-click="viewNotes()">Notes</button>
     <button type="button" class="btn btn-primary" ng-click="viewParticipant()">View Participant</button>
   </div> 
 </div>
