--- a/web/app/participant/notes.tpl.html
+++ b/web/app/participant/notes.tpl.html
@@ -65,6 +65,7 @@
     </div>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
+    <button type="button" class="btn btn-default pull-left" ng-click="viewHistory()">History</button>
     <button type="button" class="btn btn-primary" ng-click="viewParticipant()">View Participant</button>
   </div> 
 </div>
