Fixing ch-change directive when used by textarea

--- a/web/app/participant/notes.tpl.html
+++ b/web/app/participant/notes.tpl.html
@@ -53,7 +53,7 @@
         <div style="position:relative;">
           <textarea id="note{{ note.id }}"
                     ng-model="note.note"
-                    ng-blur="model.noteChanged( note.id )"
+                    cn-change="model.noteChanged( note.id )"
                     class="form-control note"
                     ng-disabled="!allowEdit"
                     cn-elastic></textarea>
