--- a/web/app/user/view.tpl.html
+++ b/web/app/user/view.tpl.html
@@ -2,7 +2,6 @@
 <div class="vertical-spacer" ng-repeat="child in model.module.children">
   <cn-record-list model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
 </div>
-<div class="vertical-spacer">
-  <cn-record-list heading="Spoken Language List (if empty then all languages are spoken)"
-                  model="model.viewModel['languageModel']"></cn-record-list>
+<div class="vertical-spacer" ng-repeat="child in model.module.choosing">
+  <cn-record-list model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
 </div>
